2008-11-08  Chong Yidong  <cyd@stupidchicken.com>

	* dired.el (dired-read-dir-and-switches): Revert to 2007-11-22
	version (bug@1285).

2008-11-08  Eli Zaretskii  <eliz@gnu.org>

	* startup.el (command-line): Ignore init-file-user when checking
	user's home directory on MS-DOS as well.

2008-11-07  Sam Steingold  <sds@gnu.org>

	* progmodes/cc-cmds.el (c-defun-name): Fix CLISP DEFUN handling.

2008-11-07  Juanma Barranquero  <lekktu@gmail.com>

	* frame.el (make-frame-on-display): Use `string-match-p'.

2008-11-07  Glenn Morris  <rgm@gnu.org>

	* progmodes/cc-defs.el (cl-macroexpand-all): Fix declaration.

2008-11-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs-lisp/lisp-mode.el (lisp-mode-variables): Add new argument
	to initialize font-lock keyword case sensitivity.
	(lisp-mode): Use it.

2008-11-06  Glenn Morris  <rgm@gnu.org>

	* eshell/esh-maint.el: Remove unused file.

	* progmodes/cc-defs.el (cl-macroexpand-all): Declare.

	* cus-edit.el (custom-comment-tag): Doc fix.
	(custom-comment, custom-variable-value-create, custom-face):
	Use face names sans -face suffix rather than aliases.

2008-11-05  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-quit): Use `window-full-width-p' to check
	window width.

2008-11-05  Chong Yidong  <cyd@stupidchicken.com>

	* server.el (server-process-filter): Only default to emacsclient's
	terminal in daemon mode.

2008-11-05  Martin Rudalics  <rudalics@gmx.at>

	* window.el (quit-window): Restore prefix argument behavior
	removed in 2008-10-30 change.  (Bug#1308)

2008-11-05  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-mode): Bugfix: Add conversion killing
	function to kill-buffer-hook, not to kill-buffer.
	Reported by Markus Triska <markus.triska@gmx.at>

2008-11-04  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-quit): Make sure that the keypad buffer
	exists before deleting its windows.

2008-11-04  Chong Yidong  <cyd@stupidchicken.com>
